[package]
name = "nix-editor-fresh"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Some functions to modify NixOS configuration files"
repository = "https://github.com/gschurck/nix-editor-fresh/"
readme = "README.md"
include = [
  "src/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
]

[[bin]]
name = "nix-editor"
path = "src/main.rs"

[dependencies]
clap =  { version = ">=4.6, <5", features = ["derive"] }
rnix = ">=0.14, <0.15"
owo-colors = ">=3.5, <4.0"
thiserror = ">=1.0.69, <2"
nixpkgs-fmt = ">=1.3, <2"
